--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp"
         tools:layout_editor_absoluteX="1dp"
@@ -20,6 +20,7 @@
             android:orientation="horizontal">
 
             <RadioGroup
+                android:id="@+id/camera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -34,6 +35,7 @@
                     android:id="@+id/camera1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:checked="true"
                     android:text="Camera1" />
 
                 <RadioButton
@@ -84,14 +86,20 @@
                 android:layout_weight="1" />
         </LinearLayout>
 
-        <View
-            android:id="@+id/preview"
+        <com.example.cameracompare.camera.GLPanel
+            android:id="@+id/preview2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
-        <View
-            android:id="@+id/show"
+        <TextureView
+            android:id="@+id/preview1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <com.example.cameracompare.camera.GLPanel
+            android:id="@+id/replay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1" />
